services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: angular
  name: angular-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: angular
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring
  name: spring-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring
  type: ClusterIP

status:
  loadBalancer: {}
