poc-ingress-spring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-spring
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-svc
            port:
              number: 80
