poc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /apache
        pathType: ImplementationSpecific
        backend:
          service:
            name: angular-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-svc
            port:
              number: 80
